Fixed charinfo readability

--- a/frontendts/styles/about.module.scss
+++ b/frontendts/styles/about.module.scss
@@ -55,7 +55,7 @@
       align-items: center;
 
       text-align: center;
-      color: mix($color-secondary, $color-invert-primary, 90%);
+      color: #000;
 
       h1 {
         font-size: 2rem;
